@@ -2,6 +2,8 @@ Version 0.3.5 IE 6 and 7 Support
 - Added support for IE 6 and 7.
 - Ajax redraw supported by Prototype, JQuery and JBoss Richfaces expressively
 - Support for Chart Zooming with Overview.
+- Fixed a bug where the chart would not render if the ID and the ClientId is different.
+- Added possibility to add a label for each data point on the chart. 
 
 Version 0.3.0 Click Action, Improved Drag effect, valueChangeListener replaced with actionListener
 - Changed the ID naming of some of the rendered DOM elements to match the JSF ID naming Scheme
